[package]
name = "dywapitchtrack"
description = "A Rust implementation of dywapitchtrack by Antoine Schmitt"
authors = ["Nico Franke <nico.franke01@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ZerNico/dywapitchtrack_rs"
repository = "https://github.com/ZerNico/dywapitchtrack_rs"
keywords = ["pitch", "detection", "frequency", "dywapitchtrack", "audio"]
categories = ["multimedia", "no-std", "algorithms"]
version = "0.1.0"
edition = "2021"
readme = "README.md"


[dev-dependencies]
hound = "3.5.1"
criterion = "0.5.1"

[[bench]]
name = "compute_pitch_benchmark"
harness = false
